--- a/Project/Project.cbp
+++ b/Project/Project.cbp
@@ -31,6 +31,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="function16.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="function2.c">
 			<Option compilerVar="CC" />
 		</Unit>
